cabal-version:       2.4
name:                haskell-repos
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/ad-si/haskell-repos
bug-reports:         https://github.com/ad-si/haskell-repos/issues
license:             NONE
author:              Adrian Sieber
maintainer:          Adrian Sieber <mail@adriansieber.com>
copyright:           2020 Adrian Sieber
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/ad-si/haskell-repos.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , protolude
  
  mixins:              base hiding (Prelude)
                     , protolude (Protolude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellRepos

executable haskell-repos
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskell-repos
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite haskell-repos-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       haskell-repos
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
